--- a/css/style.css
+++ b/css/style.css
@@ -96,6 +96,12 @@ body {
  	color: #fff;
  	font-size: 16px;
  }
+ .mob {
+    display: none;
+}
+.collapse {
+    display: block;
+}
  .menu-items {
  	background: #A20908;
  	padding: 12px 0;
@@ -192,6 +198,7 @@ body {
 .free-estimate form {
 	display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
     width: 89%;
 }
 .btn {
@@ -466,8 +473,334 @@ body {
 }
 /* Responsive for mobile */
 
-@media screen and (max-width: 768px) {
-/* we can write here our css for responsive view of website i can make it responsive also 
-    but due to timing issue i only write here media query
-*/
+@media screen and (max-width: 480px) {
+    .inner-container {
+        padding: 0 15px;
+    }
+
+    .social {
+        width: 37%;
+    }
+    .offers {
+        width: 63%;
+    }
+    .offers span {
+        font-weight: 600;
+        font-size: 12px;
+        margin-left: 8px;
+    }
+    .soc-offers {
+        margin-left: 20px;
+    }
+    .social img {
+        width: 18%;
+    }
+    .inner-container .main {
+        flex-wrap: nowrap;
+    }
+    .offers img {
+        width: 10%;
+    }
+    .mob {
+        display: block;
+        background: transparent;
+        border: none;
+        position: absolute;
+        top: 18px;
+        cursor: pointer;
+        right: 10px;
+        outline: 0;
+    }
+    .inner-header {
+        position: relative;
+    }
+    .mob span {
+        width: 32px;
+        margin: 3px;
+        border: 3px solid #A20908;
+        display: block;
+    }
+    .collapse {
+        display: none;
+        position: absolute;
+        display: none;
+        top: 123px;
+        background: #A20908;
+    }
+    .container {
+        padding: 0 15px;
+    }
+    .logo-col {
+        padding-bottom: 0;
+    }
+    .free-quote {
+        margin-top: 0;
+        font-size: 13px;
+        width: 50%
+    }
+    .weed-problems {
+        height: auto;
+        width: 48%;
+    }
+    .weed-problems p {
+        line-height: 18px;
+        font-size: 13px;
+    }
+    .weed-problems small {
+        font-size: 9px;
+        display: block;
+    }
+    .free-quote p {
+        line-height: 23px;
+    }
+    .menu {
+        flex-wrap: wrap;
+        justify-content: center;
+        width: 100%;
+        background: #ffffff1f;
+        text-align: center;
+    }
+    .menu li {
+        width: 100%;
+        padding: 10px;
+        
+    }
+    .menu li:not(:last-child) {
+        margin-bottom: 10px;
+        border-bottom: 1px solid #fff;
+    }
+    .menu-items .container {
+        padding: 0;
+    }
+    .menu-items {
+        background: transparent;
+    }
+    .menu a {
+        font-size: 14px;
+    }
+    .logo-col img {
+        width: 80%;
+    }
+    .info {
+        width: 100%;
+        margin-left: 0;
+    }
+    .info h1 {
+        font-size: 25px;
+    }
+    .info p {
+        font-size: 15px;
+        line-height: 40px;
+    }
+    .schedule {
+        padding: 10px 15px;
+        font-size: 15px;
+        margin-top: 8px;
+    }
+    .free-estimate h4 {
+        width: 100%;
+    }
+    .free-estimate form {
+        width: 100%;
+    }
+    .free-estimate form input, .free-estimate form select {
+        width: 80%;
+        margin: 5px auto;
+        height: 33px;
+        font-size: 14px;
+        padding: 0 10px;
+    }
+    .free-estimate h4 {
+        font-size: 17px;
+    }
+    .kid-friendly {
+        padding: 30px 44px;
+        background-position: right center;
+    }
+    .btn {
+        width: 80%;
+        height: 33px;
+        margin: 8px auto 0;
+    }
+    .free-estimate p {
+        width: 80%;
+        font-size: 13px;
+        margin: 5px auto 0;
+        text-align: center;
+    }
+    .free-estimate {
+        width: 80%;
+        position: static;
+    }
+    .heading {
+        font-size: 20px;
+    }
+    .pest-services {
+        padding: 30px 0 44px;
+    }
+    .background {
+        top: -39px;
+    }
+    .pest-txt {
+        font-size: 13px;
+        width: 100%;
+        margin: 10px auto 12px;
+    }
+    .pest-boxes {
+        width: 48%;
+        margin: 15px 0;
+    }
+    .pest-boxes img {
+        width: 18%;
+    }
+    .pest-boxes h4 {
+        font-size: 14px;
+        margin: 8px 0 0;
+    }
+    .pest-boxes a {
+        font-size: 13px;
+    }
+    .pest-boxes:nth-child(1), .pest-boxes:nth-child(2), .pest-boxes:nth-child(3) {
+        margin-bottom: 0;
+    }
+    .pest-services h2 {
+        margin-top: 30px;
+    }
+    .serving {
+        width: 100%;
+    }
+    .serving h3 {
+        margin-top: 30px;
+    }
+    .serving-kings {
+        font-size: 18px;
+    }
+    .local-txt p {
+        font-size: 15px;
+    }
+    .serving strong {
+        font-size: 19px;
+        text-align: center;
+    }
+    .full-txt {
+        width: 100%;
+        font-size: 13px;
+    }
+    .serving a {
+        margin-top: 15px;
+    }
+    .family-info {
+        padding: 30px 0;
+    }
+    .slider-box {
+        width: 100%;
+    }
+    .testimonials .bx-wrapper .bx-next, .testimonials .bx-wrapper .bx-prev {
+        width: 23px;
+        height: 23px;
+    }
+    .testi-txt {
+        font-size: 13px;
+        line-height: 19px;
+    }
+    .testimonials .bx-wrapper .bx-next {
+        right: -10px;
+        background-size: 10px;
+    }
+    .testimonials .bx-wrapper .bx-prev {
+        left: -10px;
+        background-size: 10px;
+    }
+    .testimonials {
+        padding: 30px 0;
+    }
+    .get-quote h3 {
+        font-size: 17px;
+    }
+    .contact, .testimonials .review {
+        width: 40%;
+        font-size: 13px;
+    }
+    .direction {
+        padding: 30px 0;
+    }
+    .footer-info {
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .footer-info:not(:last-child) {
+        border: 0;
+    }
+    .first {
+        margin-top: 15px;
+    }
+    .end-img {
+        width: 44%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .footer .main:after {
+        bottom: 63px;
+    }
+    .copyright {
+        font-size: 12px;
+        padding: 0 0 12px;
+    }
+    .footer-info address, .footer-info span, .footer-info a, .footer-info p {
+        font-size: 13px;
+    }
+}
+@media screen and (max-width: 410px) {
+    .logo-col img {
+        width: 60%;
+    }
+    .weed-problems {
+        margin: 10px auto 0;
+        width: 61%;
+    }
+    .collapse {
+        top: 100px;
+    }
+    .offers span {
+        margin-left: 6px;
+        font-size: 10px;
+    }
+    .free-quote {
+        width: 100%;
+        text-align: center;
+    }
+    .soc-offers {
+        margin-left: 15px;
+    }
+    .kid-friendly {
+        padding: 30px 19px;
+    }
+    .info h1 {
+        font-size: 22px;
+    }
+    .info p {
+        font-size: 14px;
+        line-height: 28px;
+    }
+    .schedule {
+        font-size: 12px;
+    }
+    .heading {
+        font-size: 18px;
+    }
+    .pest-boxes img {
+        width: 25%;
+    }
+    .contact, .testimonials .review {
+        width: 50%;
+        font-size: 12px;
+    }
+    .footer-info address, .footer-info span, .footer-info a, .footer-info p {
+        font-size: 12px;
+    }
+    .first {
+        width: 100%;
+    }
 }
